<resources>
    <string name="app_name">KonsulTayo</string>
    <string name="update">Update</string>
    <string name="patient_enrollment_record">Patient Enrollment Record</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_middle_name">Enter Middle Name</string>
    <string name="suffix">Suffix</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="birthdate">Birthdate</string>
    <string name="birthplace">Birthplace</string>
    <string name="civil_status">Civil Status :</string>
    <string name="spouse_s_name">Spouse\'s Name</string>
    <string name="educational_attainment">Educational Attainment :</string>
    <string name="employment_status">Employment Status :</string>
    <string name="family_member">Family Member :</string>
    <string name="mother_s_name">Mother\'s Name</string>
    <string name="birthdate_mom">Birthdate</string>
    <string name="residential_address">Residential Address</string>
    <string name="father_s_name">Father\'s Name</string>
    <string name="birthdate_dad">Birthdate</string>
    <string name="contact_number">Contact Number</string>
    <string name="_4p_s_member">4P\'s Member?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="philhealth_member">PhilHealth Member?</string>
    <string name="status_type">Status Type :</string>
    <string name="philhealth_no">PhilHealth No.</string>
    <string name="save_data">Save Data</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="mode_of_transaction">Mode of Transaction:</string>
    <string name="date_of_consultation">Date of Consultation</string>
    <string name="consultation_time">Consultation Time</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="temperature">Temperature</string>
    <string name="height_cm">Height (cm)</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="type_of_consultation">Type of Consultation:</string>
    <string name="chief_complaints">Chief Complaints</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="medication_treatment">Medication / Treatment</string>
    <string name="update_data">Update Data</string>
    <string name="last_name_">Last Name :</string>
    <string name="first_name_">First Name :</string>
    <string name="middle_name_">Middle Name :</string>
    <string name="suffix_">Suffix :</string>
    <string name="last_and_first_name">Last and First Name :</string>
    <string name="age_">Age :</string>
    <string name="address">Address :</string>
    <string name="consultation_id">Consultation ID :</string>
    <string name="mode_of_transaction_">Mode of Transaction :</string>
    <string name="date_of_consultation_">Date of Consultation :</string>
    <string name="consultation_time_">Consultation Time :</string>
    <string name="blood_pressure_">Blood Pressure :</string>
    <string name="temperature_">Temperature :</string>
    <string name="height_">Height :</string>
    <string name="weight_">Weight :</string>
    <string name="type_of_consultation_">Type of Consultation :</string>
    <string name="chief_complaint_">Chief Complaint :</string>
    <string name="diagnosis_">Diagnosis :</string>
    <string name="treatment_">Treatment :</string>
    <string name="delete">Delete</string>
    <string name="sex_">Sex :</string>
    <string name="birthdate_">Birthdate :</string>
    <string name="birthplace_">Birthplace :</string>
    <string name="civil_status_">Civil Status :</string>
    <string name="spouse">Spouse :</string>
    <string name="educational_attainment_">Educational Attainment :</string>
    <string name="patient_id">Patient ID :</string>
    <string name="family_member_">Family Member :</string>
    <string name="mother_s_name_">Mother\'s Name :</string>
    <string name="residential_address_">Residential Address :</string>
    <string name="employment_status_">Employment Status :</string>
    <string name="father_s_name_">Father\'s Name :</string>
    <string name="contact_number_">Contact Number :</string>
    <string name="_4p_s_member_">4p\'s Member :</string>
    <string name="philhealth_member_">PhilHealth Member :</string>
    <string name="status_type_">Status Type :</string>
    <string name="mother_s_birthdate">Mother\'s Birthdate</string>
    <string name="father_s_birthdate">Father\'s Birthdate</string>
    <string name="specific_diagnosis">Specific Diagnosis:</string>

    <string name="confirm_delete">Confirm Delete</string>
    <string name="confirmation_delete">Are you sure you want to delete?</string>

    <string name="confirm_update">Security Password Confirmation</string>

    <string name="confirm_logout">Confirm Logout</string>
    <string name="confirmation_logout">Are you sure you want to logout?</string>

    <string name="confirm_error">Error Message</string>
    <string name="confirmation_error">There was an unexpected error</string>

    <string name="barangay">Barangay :</string>
    <string name="number_of_patients">Number of Patients</string>
    <string name="loading_data">Loading Data.....</string>
    <string name="start_date">Start date</string>
    <string name="date">Date</string>
    <string name="end_date">End Date</string>
    <string name="search">Search</string>
    <string name="gender">Gender :</string>
    <string name="residents_id">Residents ID:</string>
    <string name="philhealth_no_">PhilHealth No. :</string>
    <string name="blank">-- --</string>
    <string name="barangay_">Barangay :</string>
    <string name="date_of_return">Date of Return</string>
    <string name="date_of_return_">Date of Return:</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="qr_code">QR Code</string>


    <string-array name="civilStatus">
        <item>Single</item>
        <item>Widow/er</item>
        <item>Married</item>
        <item>Separated</item>
        <item>Annulled</item>
        <item>Co-Habitation</item>
    </string-array>

    <string-array name="educAttainment">
        <item>No Formal Education</item>
        <item>Elementary</item>
        <item>High School</item>
        <item>Vocational</item>
        <item>College</item>
        <item>Post Graduate</item>
    </string-array>

    <string-array name="empStatus">
        <item>Student</item>
        <item>Employed</item>
        <item>Unknown</item>
        <item>Retired</item>
        <item>None/Unemployed</item>
    </string-array>

    <string-array name="famMember">
        <item>Father</item>
        <item>Mother</item>
        <item>Son</item>
        <item>Daughter</item>
    </string-array>

    <string-array name="statusType">
        <item>Dependent</item>
        <item>Member</item>

    </string-array>

    <string-array name="yesNo">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="modeOfTransaction">
        <item>Walk-in</item>
        <item>Visited</item>
        <item>Referral</item>
    </string-array>

    <string-array name="typeOfConsultation">
        <item>General</item>
        <item>Prenatal</item>
        <item>Dental Care</item>
        <item>Child Care</item>
        <item>Child Nutrition</item>
        <item>Injury</item>
        <item>Adult Immunization</item>
        <item>Family Planning</item>
        <item>Postpartum</item>
        <item>Tuberculosis</item>
        <item>Child Immunization</item>
        <item>Sick Children</item>
        <item>Firecracker Injury</item>
    </string-array>

    <string-array name="barangay">
        <item>Bagong Pook</item>
        <item>Balibago</item>
        <item>Barangay 1 (Poblacion)</item>
        <item>Barangay 2 (Poblacion)</item>
        <item>Barangay 3 (Poblacion)</item>
        <item>Barangay 4 (Poblacion)</item>
        <item>Barangay 5 (Poblacion)</item>
        <item>Binubusan</item>
        <item>Bungahan</item>
        <item>Cumba</item>
        <item>Humayingan</item>
        <item>Kapito</item>
        <item>Lumaniag</item>
        <item>Luyahan</item>
        <item>Malaruhatan</item>
        <item>Matabungkay</item>
        <item>Prenza</item>
        <item>Puting-Kahoy</item>
        <item>San Diego</item>
    </string-array>

    <string-array name="gender">
        <item>MALE</item>
        <item>FEMALE</item>
    </string-array>

</resources>