<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_report"
    tools:context=".report.ViewReport"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/startDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:hint="@string/start_date"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/black1"
                    tools:ignore="NestedWeights" />

                <Button
                    android:id="@+id/btnStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/date" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/endDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:hint="@string/end_date"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/black1"
                    tools:ignore="NestedWeights" />

                <Button
                    android:id="@+id/btnEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/date" />

                <Button
                    android:id="@+id/btnSearchDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="10dp"
                    android:enabled="false"
                    android:textColor="@color/black1"
                    android:text="@string/search" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:srcCompat="@drawable/logo123" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/recordCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:textColor="@color/black1"
                android:text="-- --" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvLoadingData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/loading_data"
        android:layout_gravity="center"
        android:textColor="@color/black1"
        android:textSize="28sp"
        android:textStyle="bold"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPatients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/itr_pat_list_item" />

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutDialog"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/patients_count_background"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/textTitle"
                android:layout_marginTop="60dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/patients_background"
                android:padding="10dp"
                android:textColor="@color/white"
                android:text="@string/number_of_patients"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPatients"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="80dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

<!--        <LinearLayout-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:layout_width="300dp"-->
<!--            android:layout_height="50dp"-->

<!--            android:layout_marginLeft="10dp"-->
<!--            android:layout_marginRight="10dp"-->
<!--            android:orientation="horizontal">-->

<!--            <LinearLayout-->
<!--                android:layout_width="150dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:orientation="horizontal">-->

<!--                <TextView-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_marginTop="5dp"-->
<!--                    android:layout_weight="1"-->
<!--                    android:text="@string/number_of_patients"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:textSize="18sp"-->
<!--                    android:textStyle="bold" />-->
<!--            </LinearLayout>-->

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:orientation="horizontal">-->

<!--                <TextView-->
<!--                    android:id="@+id/tvPatients"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_weight="1"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:textSize="18sp" />-->

<!--            </LinearLayout>-->

<!--        </LinearLayout>-->

    </LinearLayout>


</LinearLayout>